Fix overflowing code boxes

--- a/css/index.css
+++ b/css/index.css
@@ -94,6 +94,7 @@
 pre {
 	border: double;
 	max-width: 80ch;
+	overflow: auto;
 	padding: 1vh 1vw;
 }
 
